--- a/GWSite/templates/GWHK/contactus.html
+++ b/GWSite/templates/GWHK/contactus.html
@@ -84,7 +84,7 @@
     var marker = new google.maps.Marker({
         position: {lat: 22.299600, lng: 114.167158},
         map: map,
-        title: 'Goldenway Investments Holdings Limited'
+        title: 'Goldenway Investment Holdings Limited'
         });
     }
   </script>
