--- a/GWSite/templates/GWHK/footer.html
+++ b/GWSite/templates/GWHK/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="container">
-      <p><span class="text-muted">金道集團：貴金屬 | 證券 | 期貨 | 資產管理 | 外匯</span></p>
-      <p><span class="text-muted">Copyright©2020金道投資控股有限公司版權所有，不得轉載</span></p>
-      <p><span class="text-muted">熱線電話：(852)3719 9399</span></p>
-      <p><span class="text-muted">地址：香港九龍尖沙咀海港城港威大廈2座28樓</span></p>
+      <p><span class="footer-nav">金道集團：貴金屬 | 證券 | 期貨 | 資產管理 | 外匯</span></p>
+      <p><span class="footer-nav">Copyright©2020金道投資控股有限公司版權所有，不得轉載</span></p>
+      <p><span class="footer-nav">熱線電話：(852)3719 9399</span></p>
+      <p><span class="footer-nav">地址：香港九龍尖沙咀海港城港威大廈2座28樓</span></p>
     </div>
   </footer>
