--- a/GWSite/templates/GWHK/base.html
+++ b/GWSite/templates/GWHK/base.html
@@ -57,6 +57,8 @@
   
     {% include 'GWHK/footer.html' %}
 
+    {% block extra_scripts %}
+    {% endblock %}
     <!-- Custom JS -->
     <script src="{% static 'js/app.js' %}"></script>
   </body>
